contrib/sync_db_pools/codegen/tests/ui-fail-nightly/database-syntax.stderr
error: unions cannot have zero fields
  --> tests/ui-fail-nightly/database-syntax.rs:46:1
   |
46 | union Baz {  }
   | ^^^^^^^^^^^^^^

error[E0432]: unresolved import `rocket_sync_db_pools`
 --> tests/ui-fail-nightly/database-syntax.rs:1:5
  |
1 | use rocket_sync_db_pools::database;
  |     ^^^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `rocket_sync_db_pools`
  |
help: there is a crate or module with a similar name
  |
1 - use rocket_sync_db_pools::database;
1 + use rkt_sync_db_pools::database;
  |

error[E0432]: unresolved import `rocket`
 --> tests/ui-fail-nightly/database-syntax.rs:6:5
  |
6 | use rocket::{Rocket, Build};
  |     ^^^^^^ use of unresolved module or unlinked crate `rocket`
  |
  = help: if you wanted to use a crate named `rocket`, use `cargo add rocket` to add it to your `Cargo.toml`

error[E0432]: unresolved import `rocket_sync_db_pools`
 --> tests/ui-fail-nightly/database-syntax.rs:7:5
  |
7 | use rocket_sync_db_pools::{r2d2, Poolable, PoolResult};
  |     ^^^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `rocket_sync_db_pools`
  |
help: there is a crate or module with a similar name
  |
7 - use rocket_sync_db_pools::{r2d2, Poolable, PoolResult};
7 + use rkt_sync_db_pools::{r2d2, Poolable, PoolResult};
  |
